--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@auth0/auth0-spa-js": "^1.10.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
