--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.8.1",
+    "moment": "^2.27.0",
     "pg": "^8.3.0"
   }
 }
