--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
+    "vue-slide-up-down": "^2.0.1",
     "vue2-hammer": "^2.1.2",
     "vuex": "^3.5.1"
   },
