--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fosho",
   "version": "1.0.0",
   "description": "shopping list",
+  "engines": {
+    "node": "12.16"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
